[JSC] Array ToPrimitive fast path ignores Array.prototype.valueOf override https://bugs.webkit.org/show_bug.cgi?id=314582 rdar://176823624

Reviewed by Yusuke Suzuki.

313028@main fixed the case where overriding Object.prototype.valueOf can break
array stringification. This patch handles overriding Array.prototype.valueOf too.

Test: JSTests/stress/array-prototype-valueOf-override-should-not-break-toPrimitive.js

* JSTests/stress/array-prototype-valueOf-override-should-not-break-toPrimitive.js: Added.
(Array.prototype.valueOf):
* Source/JavaScriptCore/runtime/JSArray.cpp:
(JSC::JSArray::isToPrimitiveFastAndNonObservable):
* Source/JavaScriptCore/runtime/JSGlobalObject.cpp:
(JSC::JSGlobalObject::init):
* Source/JavaScriptCore/runtime/JSGlobalObject.h:

Canonical link: https://commits.webkit.org/314056@main