Source/JavaScriptCore/runtime/JSArray.cpp
@@ -2146,6 +2146,8 @@ bool JSArray::isToPrimitiveFastAndNonObservable()
         return false;
     if (!globalObject->objectPrototypeValueOfWatchpointSet().isStillValid()) [[unlikely]]
         return false;
+    if (!globalObject->arrayPrototypeValueOfWatchpointSet().isStillValid()) [[unlikely]]
+        return false;
 
     Structure* structure = this->structure();
     return globalObject->isOriginalArrayStructure(structure);
